# python-vectorization

./: README.md  pyproject.toml  vectorization.py
