[tool.poetry]
name = "python-vectorization"
version = "0.1.0"
description = ""
authors = ["metaguji <59725664+metaguji@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
